# convolution_plug

./: .gitignore  Cargo.toml  README.md  bundler.toml
.cargo/: config.toml
.github/workflows/: build.yaml
benches/: benchmark.rs
bindings/: PluginParams.ts
convolution-gui/: global.d.ts  next.config.ts  package.json
convolution-gui/app/: globals.css  layout.tsx  page.tsx
convolution-gui/bindings/: BackendMessage.ts  GUIParams.ts  GuiMessage.ts  IRConfig.ts  InitResponse.ts  IrData.ts  IrProcessingConfig.ts  KnobGesture.ts  Message.ts  ParameterUpdate.ts  Parameters.ts
convolution-gui/components/: GainControls.tsx  IRLoader.tsx  Toggle.tsx  TopBar.tsx  fileInput.tsx
convolution-gui/components/filter-controls/: BellControls.tsx  FilterColumn.tsx  HighpassControls.tsx  LowpassControls.tsx  Toggle.tsx
convolution-gui/components/ir-controls/: IRInput.tsx  IRManager.tsx  IrInfoDisplay.tsx  NormalizeControls.tsx  ResampleControls.tsx
convolution-gui/components/knobs/: Knob.tsx  KnobBaseThumb.tsx  KnobTextInput.tsx
convolution-gui/contexts/: GlobalParamsContext.ts  MessageBusContext.ts
convolution-gui/hooks/: useEventDispatcher.ts  useParameter.ts  useWaveform.ts
convolution-gui/lib/: constants.ts  format.ts  parameters.ts  utils.ts
gui/: global.d.ts  package.json  pnpm-lock.yaml
gui/app/: globals.css  page.tsx  thing.ts
gui/bindings/: InitResponse.ts  IrConfig.ts  IrData.ts  Message.ts  ParameterUpdate.ts
gui/components/: GainControls.tsx  Resize.tsx
gui/components/filter-controls/: BellControls.tsx  FilterColumn.tsx  HighpassControls.tsx  LowpassControls.tsx  Toggle.tsx
gui/components/ir-controls/: IRManager.tsx  IrInfoDisplay.tsx  NormalizeControls.tsx  ResampleControls.tsx
gui/components/knobs/: Knob.tsx
gui/contexts/: GlobalParamsContext.ts
gui/hooks/: useMessageDispatcher.ts  useMessageSubscriber.ts  useParameter.ts  usePluginListener.ts  useWaveform.ts
gui/lib/: constants.ts  index.ts  parameters.ts
nih-plug-webview/: Cargo.toml  README.md
nih-plug-webview/src/: editor.rs  lib.rs  state.rs
np-fundsp-bridge/: Cargo.toml  README.md
np-fundsp-bridge/src/: lib.rs
src/: callbacks.rs  config.rs  dsp.rs  editor.rs  ipc.rs  lib.rs  main.rs  params.rs  util.rs
src/dsp/: convolve.rs  ir.rs  mod.rs  nodes.rs  param_node.rs  param_node_shared.rs  param_nodes.rs  params.rs  resample.rs  switched.rs
src/editor/: bundled.rs  embedded.rs  event_loop.rs  ipc.rs  mod.rs  tasks.rs
src/params/: callbacks.rs  mod.rs
src/processing/: config.rs  decode.rs  mod.rs  normalize.rs  resample.rs
