[package]
name = "convolution_plug"
version = "0.1.0"
edition = "2021"
authors = ["dvub <todo@todo.com>"]
license = "Other licenses can be set in Cargo.toml, but using the project needs to be GPLv3 compliant to be able to use the VST3 exporter. Check Cargo.toml for more information."
homepage = "todo"
description = "todo"

[workspace]
members = ["xtask", "nih-plug-webview"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih-plug-webview = { path = "nih-plug-webview" }

hound = "3.5.1"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
convolution = { git = "https://github.com/holoplot/fft-convolution.git" }
baseview = { git = "https://github.com/RustAudio/baseview" }
mime_guess = "2.0.5"
include_dir = "0.7.4"
serde = "1.0.219"
serde_json = "1.0.140"
ts-rs = "11.0.1"
crossbeam-channel = "0.5.15"
itertools = "0.14.0"
directories = "6.0.0"
fundsp = { git = "https://github.com/dvub/fundsp.git" }
anyhow = "1.0.98"
rubato = "0.16.2"
float-cmp = "0.10.0"
tempdir = "0.3.7"

# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
