[package]
name = "convolution_plug"
version = "0.1.0"
edition = "2021"
authors = ["dvub <todo@todo.com>"]
license = "Other licenses can be set in Cargo.toml, but using the project needs to be GPLv3 compliant to be able to use the VST3 exporter. Check Cargo.toml for more information."
homepage = "todo"
description = "todo"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
], rev = "17ba595e748927290eb72974bc528f11d1d20e89" }

# DSP 
fundsp = { git = "https://github.com/dvub/fundsp.git" }
convolution = { git = "https://github.com/holoplot/fft-convolution.git" }
# other IR processing
hound = "3.5.1"
rubato = "0.16.2"

# GUI
nih_plug_webview = { git = "https://github.com/toiglak/nih-plug-webview" }
mime_guess = "2.0.5"
include_dir = "0.7.4"
serde = "1.0.219"
serde_json = "1.0.140"
ts-rs = "11.0.1"
# error handling
anyhow = "1.0.98"


# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[dev-dependencies]
tempdir = "0.3.7"
float-cmp = "0.10.0"

# criterion = { version = "0.5", features = ["html_reports"] }

# [[bench]]
# name = "benchmark"
# harness = false

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
