[package]
name = "np-fundsp-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
fundsp = { git = "https://github.com/dvub/fundsp.git", features = [
    "crossbeam",
] }
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
